# Extension.SignalRGB-Bridge

./: .skyignore  Cargo.toml  build-native.ps1  build.rs  init.lua  manifest.json
data/SRGB-Device/: Corsair_Dominator_Ram.ts
data/SRGB-Device/Asus/: ASUS_Keyboard.js  ASUS_Monitor_Controller.js  ASUS_Monitor_Controller2.js  ASUS_Multidevice_Controller.js  ASUS_ROG_Claymore_I.js  ASUS_ROG_Claymore_II.js  ASUS_ROG_Spotlight.js  ASUS_ROG_Strix_LC.js  ASUS_Ryujin_AIO_Controller.js  ASUS_Ryuo_AIO_Controller.js  ASUS_TUF_K1.js  Asus_Aura_Terminal_Controller.js  Asus_Mouse.js  Asus_ROG_Balteus.js  Asus_ROG_Balteus_Qi.js  Asus_ROG_Throne_Qi_Stand.js  ENE_RAM.js
data/SRGB-Device/BYTech/: BYTech_Keyboard_Controller.js
data/SRGB-Device/Colorful/: Colorful_Ampere_GPU.js
data/SRGB-Device/CoolerMaster/: ACER_P09-600_Controller.js  CoolerMaster_CK530_V2_Keyboard.js  CoolerMaster_CK550_V2_Keyboard.js  CoolerMaster_CK552_V2_Keyboard.js  CoolerMaster_CK720_Keyboard.js  CoolerMaster_CK721_Keyboard.js  CoolerMaster_MK730_Keyboard.js  CoolerMaster_MM711_Mouse.js  CoolerMaster_MP750L_Mat.js  CoolerMaster_MP750M_Mat.js  CoolerMaster_MP860_Mat.js  (+11 more)
lib/: context.lua  device.lua  device_types.lua  discovery.lua  endpoint.lua  frame.lua  scanner.lua  utils.lua
locales/: de.json  en-US.json  es.json  fr.json  ru.json  tr.json  zh-CN.json  zh-TW.json
page/: index.html  package-lock.json
page/src/: App.tsx  bridge.ts  i18n.ts  theme.css  types.ts
src/: abi.rs  bridge.rs  device_worker.rs  ffi.rs  hid.rs  host.rs  js_runtime.rs  lib.rs  scripts.rs  system_info.rs  topology.rs  types.rs
(+389 files in other folders)
